fix: horizontal overflow

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -17,6 +17,7 @@ $breakpoints: (
 html {
   &::-webkit-scrollbar {
     width: .5rem;
+    height: .5rem;
   }
   &::-webkit-scrollbar-thumb {
     background-color: $color-white;
